<resources>
    <style name="news_source">SOURCE</style>
    <string name="app_name">NewScout</string>
    <string name="news_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry standard dummy text ever since the 1500s,make a type specimen book.It has survived not only five centuries,but also the leap into electronic typesetting,remaining essentially unchanged.It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages.Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry standard dummy text ever since the 1500s,make a type specimen book.It has survived not only fiveLorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry standard dummy text ever since the 1500s,make a type specimen book.It has survived not only five centuries,but also the leap into electronic typesetting,remaining essentially unchanged.It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages.Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry standard dummy text ever since the 1500s,make a type specimen book.It has survived not only five Ipsum has been the industry standard dummy text ever since the 1500s,make a type specimen book.It has survived not only five centuries,but also the leap into electronic typesetting,remaining essentially unchanged.It was popularised in the 1960s
    </string>
    <string name="general">General</string>
    <string name="news_source">Source</string>
    <string name="btn_mode">Night Mode</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="retype_password">Retype Password</string>
    <string name="sign_in_title">Log In</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="notification">Notification</string>
    <string name="already_member">Already a member? Login</string>
    <string name="create_account">No account yet? Create one</string>
    <string name="action_settings">Settings</string>
    <string name="read_file">This app needs access to your file storage so that it can read photos.</string>
    <string name="news_item_time">Times Ago</string>
    <string name="read_more">Read More</string>
    <string name="key_breaking_news">key_breaking_news</string>
    <string name="breaking_news">Breaking News</string>
    <string name="key_daily_edition">key_daily_edition</string>
    <string name="daily_edition">Daily Edition</string>
    <string name="key_personalised">key_personalised</string>
    <string name="personalised">Personalised</string>
    <string name="tv_profile_section">Profile</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_forgot_pass">Forgot Password</string>
    <string name="login">Login</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="recommended_news_title">More Stories :</string>
    <string name="facebook_app_id">496521740833030</string>
    <string name="fb_login_protocol_scheme">fb496521740833030</string>
    <string name="web_client_id">274993417630-f8n7b7dvje2isetel37b23fiuuqatp0e.apps.googleusercontent.com</string>
    <string name="search">Search</string>
    <string name="change_password">Change Password</string>
    <string name="key_font_size_pref">sp_text_size</string>
    <string name="summary">Fafadia Tech is an Information Technology (IT) organization focused on delivering smart, next-generation business solutions that help enterprises across the world overcome their business challenges. These solutions leverage innovations in technology, knowledge of business processes, and domain expertise to provide clients a competitive edge."</string>
    <string name="app_version">App Version :</string>
    <string name="app_version_value">1.0</string>
    <string name="last_update">Last Updated :</string>
    <string name="last_update_value">14/04/2020</string>
    <string name="developed_by">Developed By :</string>
    <string name="developed_by_value">www.fafadiatech.com</string>
    <string name="copyright">Copyright © 2020 FafadiaTech</string>
    <string name="about_us">About Us</string>
    <string name="bookmark_title">My Bookmark</string>
    <string name="no_bookmark_msg">No bookmared news to display</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="already_ac_msg">Already have an account? SignIn</string>
    <string name="get_started">Get Started</string>
    <string name="no_result_found">No result found</string>
    <string name="no_news_found">No news found</string>
    <string name="tab_menu">Sample Menu</string>
    <string name="placeholder">Placeholder Image</string>
    <string name="more_stories_title">More Stories</string>
    <string name="my_bookmarks">My Bookmark</string>
    <string name="no_bookmark">No bookmarks</string>
    <string name="see_bookmark_msg">Login to see bookmark list</string>
    <string name="no_signin_msg">Can\'t signIn as no internet available</string>
    <string name="not_login_msg">User not logged in</string>
    <string name="no_signup_msg">Can\'t signUp as internet not available</string>
    <string name="count">Count</string>
    <string name="nav_header_subtitle">www.fafadiatech.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="test_ad_title">This is test ads title.</string>
    <string name="test_ad_subtitle">Ads sub title.</string>
</resources>
