<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <PreferenceCategory
        app:title="@string/general"
        app:layout="@layout/custom_preference_category"
        >
        <ListPreference
            app:key="@string/key_font_size_pref"
            app:title="Text Size"
            app:dialogTitle="Text Size"
            app:entries="@array/setting_screen_font"
            app:entryValues="@array/setting_screen_font_category"
            app:defaultValue="medium" >
        </ListPreference>
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/notification"
        app:layout="@layout/custom_preference_category"
        >
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:title="@string/breaking_news"
            app:key="@string/key_breaking_news" >
        </SwitchPreferenceCompat>
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:title="@string/daily_edition"
            app:key="@string/key_daily_edition" >
        </SwitchPreferenceCompat>
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:title="@string/personalised"
            app:key="@string/key_personalised" >
        </SwitchPreferenceCompat>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="Profile"
        app:layout="@layout/custom_preference_category">
        <Preference
            app:layout="@layout/preference_two_line"
            app:key="login"
            app:title="Login"
            app:summary="Tap to Login" />

        <Preference
            app:layout="@layout/preference_two_line"
            app:key="profile"
            app:title="Profile" />
        <Preference
            app:layout="@layout/preference_two_line"
            app:key="share_app"
            app:title="Share this app" />
        <Preference
            app:layout="@layout/preference_two_line"
            app:key="rate_app"
            app:title="Rate this app" />
        <Preference
            app:layout="@layout/preference_two_line"
            app:key="about_us"
            app:title="About Us" />
        <Preference
            app:layout="@layout/preference_two_line"
            app:key="version"
            app:title="" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>