<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_about_us_screen"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DefaultFontRegular"
            android:layout_gravity="center"
            android:text="@string/about_us"
            android:textColor="@color/icon_color"
            android:textSize="@dimen/font_xxlarge"
            />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/about_us_description"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        style="@style/DefaultFontRegular"
        android:text="@string/summary"
        app:layout_constraintTop_toBottomOf="@id/toolbar_about_us_screen"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_large"
        android:textSize="@dimen/font_large"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        />

    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DefaultFontRegular"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:text="@string/app_version"
        android:textSize="@dimen/font_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_us_description" />

    <TextView
        android:id="@+id/tv_last_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DefaultFontRegular"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:text="@string/last_update"
        android:textSize="@dimen/font_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_version" />

    <TextView
        android:id="@+id/tv_developed_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DefaultFontRegular"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:text="@string/developed_by"
        android:textSize="@dimen/font_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_last_update" />

    <TextView
        android:id="@+id/tv_app_version_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DefaultFontRegular"
        android:layout_marginStart="@dimen/margin_medium"
        android:text="@string/app_version_value"
        android:textSize="@dimen/font_small"
        app:layout_constraintBaseline_toBaselineOf="@+id/app_version"
        app:layout_constraintLeft_toRightOf="@id/app_version" />

    <TextView
        android:id="@+id/tv_last_update_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DefaultFontRegular"
        android:layout_marginStart="@dimen/margin_medium"
        android:text="@string/last_update_value"
        android:textSize="@dimen/font_small"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_last_update"
        app:layout_constraintStart_toEndOf="@+id/tv_last_update"
        app:layout_constraintTop_toTopOf="@id/tv_last_update" />

    <TextView
        android:id="@+id/tv_developed_by_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DefaultFontRegular"
        android:layout_marginStart="8dp"
        android:autoLink="web"
        android:text="@string/developed_by_value"
        android:textSize="@dimen/font_small"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_developed_by"
        app:layout_constraintLeft_toLeftOf="@id/tv_app_version_no"
        app:layout_constraintStart_toEndOf="@+id/tv_developed_by" />

    <TextView
        android:id="@+id/tv_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DefaultFontRegular"
        android:text="@string/copyright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="@dimen/margin_large"
        />



</androidx.constraintlayout.widget.ConstraintLayout>