<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ScreenBg"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_sign_in"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/LoginTitle"
            android:text="@string/login"
            />
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_enter_email_signIn"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/toolbar_sign_in"
        android:layout_marginTop="@dimen/margin_xxxlarge"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_password_signIn"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/ed_enter_email_signIn" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/sign_in_title"
        style="@style/LoginScreenButton"
        app:layout_constraintLeft_toRightOf="@id/guideline_start_sign_in"
        app:layout_constraintRight_toLeftOf="@id/guideline_end_sign_in"
        app:layout_constraintTop_toBottomOf="@id/ed_password_signIn" />

    <Button
        android:id="@+id/btn_forgot_password"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/profile_forgot_pass"
        style="@style/LoginScreenButton"
        app:layout_constraintLeft_toRightOf="@id/guideline_start_sign_in"
        app:layout_constraintRight_toLeftOf="@id/guideline_end_sign_in"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_login_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@id/guideline_start_sign_in"
        app:layout_constraintRight_toLeftOf="@id/guideline_end_sign_in"
        app:layout_constraintTop_toBottomOf="@id/btn_forgot_password" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_login_facebook"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/size_20dp"
        app:layout_constraintLeft_toRightOf="@id/guideline_start_sign_in"
        app:layout_constraintRight_toLeftOf="@id/guideline_end_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_google"
        />

    <TextView
        android:id="@+id/create_Account"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        style="@style/SignupMsg"
        android:layout_marginTop="@dimen/margin_medium"
        android:gravity="center_horizontal"
        android:text="@string/create_account"
        app:layout_constraintLeft_toRightOf="@id/guideline_start_sign_in"
        app:layout_constraintRight_toLeftOf="@id/guideline_end_sign_in"
        app:layout_constraintTop_toBottomOf="@id/btn_login_facebook"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8"
        />

</androidx.constraintlayout.widget.ConstraintLayout>