<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ScreenBg">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_change_pass"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/LoginTitle"
            android:text="@string/change_password"
            />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/username"
        style="@style/SignupMsg"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:textSize="@dimen/font_large"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end_change_passwword"
        app:layout_constraintStart_toStartOf="@+id/guideline_start_change_passwword"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_change_pass" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_old_password"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        style="@style/EditTextStyle"
        android:layout_marginTop="@dimen/size_24dp"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_new_password"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        style="@style/EditTextStyle"
        android:layout_marginTop="@dimen/margin_medium"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_old_password" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_confirm_pass"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        style="@style/EditTextStyle"
        android:layout_marginTop="@dimen/margin_medium"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_new_password" />

    <Button
        android:id="@+id/btn_enter"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        style="@style/LoginScreenButton"
        android:layout_marginTop="@dimen/size_44dp"
        android:text="@string/submit"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@id/guideline_start_change_passwword"
        app:layout_constraintRight_toLeftOf="@id/guideline_end_change_passwword"
        app:layout_constraintTop_toBottomOf="@+id/et_confirm_pass" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_change_passwword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end_change_passwword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>