<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ScreenBg" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_forgot_pass"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_forgot_pass"
            style="@style/LoginTitle"
            />
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/EditTextStyle"
        android:layout_marginTop="@dimen/size_196dp"
        android:hint="@string/enter_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_forgot_pass" />

    <Button
        android:id="@+id/btn_enter_forgot_pass"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20dp"
        android:text="@string/submit"
        style="@style/LoginScreenButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@id/guideline_start_forgot_passwword"
        app:layout_constraintRight_toLeftOf="@id/guideline_end_forgot_passwword"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_forgot_passwword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end_forgot_passwword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8"
        />

</androidx.constraintlayout.widget.ConstraintLayout>